[gd_scene load_steps=18 format=3 uid="uid://cytc6f85846my"]

[ext_resource type="Script" path="res://scripts/purple_slime.gd" id="1_j8dar"]
[ext_resource type="Texture2D" uid="uid://c1nm3bqg4pgoa" path="res://assets/sprites/slime_purple.png" id="2_goqj8"]
[ext_resource type="PackedScene" uid="uid://b3nowi0xgdepl" path="res://scenes/kill_zone.tscn" id="3_fl1uk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mgdwh"]
atlas = ExtResource("2_goqj8")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0x6h"]
atlas = ExtResource("2_goqj8")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgltt"]
atlas = ExtResource("2_goqj8")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d60fc"]
atlas = ExtResource("2_goqj8")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu2xr"]
atlas = ExtResource("2_goqj8")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hxey"]
atlas = ExtResource("2_goqj8")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xdup"]
atlas = ExtResource("2_goqj8")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7r3k"]
atlas = ExtResource("2_goqj8")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6wfc"]
atlas = ExtResource("2_goqj8")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bivgy"]
atlas = ExtResource("2_goqj8")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4tpm"]
atlas = ExtResource("2_goqj8")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbwbf"]
atlas = ExtResource("2_goqj8")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_6qcxg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgdwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0x6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgltt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d60fc")
}],
"loop": true,
"name": &"attacked",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu2xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hxey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xdup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7r3k")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6wfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bivgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4tpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbwbf")
}],
"loop": true,
"name": &"respawn",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_heea2"]
size = Vector2(10, 14)

[node name="purple_slime" type="Node2D"]
script = ExtResource("1_j8dar")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_6qcxg")
animation = &"respawn"
autoplay = "idle"
frame = 1
frame_progress = 0.384734

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
target_position = Vector2(-12, 0)

[node name="RayCast2DRight" type="RayCast2D" parent="."]
target_position = Vector2(12, 0)

[node name="kill_zone" parent="." instance=ExtResource("3_fl1uk")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill_zone"]
shape = SubResource("RectangleShape2D_heea2")

[connection signal="damaged_enemy" from="kill_zone" to="." method="_on_kill_zone_damaged_enemy"]
